--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,11 @@ stages:
         versionSpec: '10.x'
       displayName: 'Install Node.js'
 
+    - task: Npm@1
+      inputs:
+        command: 'install'
+
     - script: |
-        npm install
         npm run build --if-present
         npm run test --if-present
       displayName: 'npm install, build and test'
