--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
     - script: |
         npm run build --if-present
         npm run test --if-present
-      displayName: 'npm install, build and test'
+      displayName: 'npm build and test'
       
     - task: ArchiveFiles@2
       displayName: 'Archive files'
