--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,10 +41,10 @@ stages:
         workingDir: 'NodejsWebApp1'
       displayName: 'npm install'
 
-    - script: 
-        npm run build --if-present
-        npm run test --if-present
-      displayName: 'npm build and test'
+    - task: Npm@0 
+      inputs:
+        command: 'build'
+      displayName: 'npm build'
       
     - task: ArchiveFiles@2
       displayName: 'Archive files'
